Basic Bootstrap Layout

--- a/index.html
+++ b/index.html
@@ -22,25 +22,54 @@
   </style>
 </head>
 <body>
-
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
-
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
+  <header class="text-center">
+    Simple, traffic-based pricing
+    Sign-up for our 30-day trial. No credit card required. 
+  </header>
+<div class="container p-5 text-center">
+  <div class="row">
+    <div class="col text-center">
+      Pageviews
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      $ /month
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6 text-center">
+      Monthly Billing
+    </div>
+    <div class="col-6 text-center">
+      Yearly Billing 25% discount
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      Unlimited websites
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      100% data ownership
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      Email reports
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      Start my trial
+    </div>
+  </div>  
   
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Steven Chafin</a>.
   </div>
 </body>
 </html>
