--- a/index.html
+++ b/index.html
@@ -22,22 +22,34 @@
   </style>
 </head>
 <body>
-
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
-
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
+  <header class="text-center">
+    <h5 class="text-dark">
+      Simple, traffic-based pricing
+    </h5>
+    <p class="text-light text-small">
+      Sign-up for our 30-day trial. No credit card required. 
+    </p>
+  </header>
+  <div class="card text-center">
+    <div class="card-body ">
+      <p class="">Pageviews</p>
+      <p>$ /month</p>
+    </div>
+    <div class="card-body">
+      Monthly Billing
+      Yearly Billing 25% discount
+    </div>
   
+    <ul class="list-unstyled">
+      <li>Unlimited websites</li>
+      <li>100% data ownership</li>
+      <li>Email Reports</li>
+      
+    </ul> 
+    
+    Start my trial
+  
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
