--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
     </header>
     <div class="card text-center m-3">
       <div class="card-body ">
-        <p class="">Pageviews</p>
+        <p class="pageViewParagraph"><span id="pageViewNumber">100k</span> Pageviews</p>
         <!-- slider -->
         <div class="wrap">
-          <input type="range" class="range" min="0" max="100" step="0.1" value="0">
+          <input type="range"  id="pageViewSlider" class="range" min="0" max="100" step="25" value="60">
+          
           <div class="track">
             <div class="track-inner"></div>
           </div>
           <div class="thumb"></div>
         </div>
         <div class="priceContainer">
-          <p><span>$</span><span id="rangeNumbers">16</span> /month</p>
+          <p id="priceParagraph"><span id="rangeNumbers">$16.00</span> /month</p>
         </div>
       </div>
       <div class="card-body">
@@ -64,7 +65,7 @@
           <!-- switch -->
           <div class="col-2">
             <label class="switch ">
-              <input type="checkbox" class="default">
+              <input type="checkbox" class="default" name="discountSlider">
               <span class="slider round"></span>
             </label>
           </div>
