Seriously hope this fixes the images

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 </head>
 <body>
   <!-- background pattern -->
-  <div class="img-fluid" >
+  <div class="img-fluid" 
+  style=" background-image: url('./images/bg-pattern.svg');">
     <!-- background circles -->
-    <div class="bg-image">
+    <div class="bg-image"
+    style="background-image: url('./images/pattern-circles.svg');">
           <!-- header -->
     <header class="text-center">
       <h5 class="text-dark">
@@ -51,7 +53,8 @@
           <div class="track">
             <div class="track-inner"></div>
           </div>
-          <div class="thumb"></div>
+          <div class="thumb"
+          style="background:url('./images/icon-slider.svg') hsl(174, 86%, 45%);"></div>
         </div>
         <div class="priceContainer">
           <p id="priceParagraph"><span id="rangeNumbers">$16.00</span> /month</p>
