fixed slider image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- start of card -->
     </div>
     </header>
-    <div class="card text-center m-3">
+    <div class="card text-center ">
       <div class="card-body ">
         <p class="pageViewParagraph"><span id="pageViewNumber">100k</span> Pageviews</p>
         <!-- slider -->
@@ -54,7 +54,10 @@
             <div class="track-inner"></div>
           </div>
           <div class="thumb"
-          style="background:url('./images/icon-slider.svg') hsl(174, 86%, 45%);"></div>
+          style="background:url('./images/icon-slider.svg') hsl(174, 86%, 45%); background-repeat: no-repeat;
+          background-position: center;
+          background-size: 60%;"
+          ></div>
         </div>
         <div class="priceContainer">
           <p id="priceParagraph"><span id="rangeNumbers">$16.00</span> /month</p>
